# OpenGl-Project

./: CMakeLists.txt  README.md  TODO.txt  application.cpp  application.hpp  data.json  main.cpp
images/: desktop.ini
libraries/my_structures/: Enums.hpp  GameController.cpp  GameController.hpp  GameTileData.cpp  GameTileData.hpp  MapManager.cpp  MapManager.hpp  MovingCamera.cpp  MovingCamera.hpp  ObjectRenderStorage.cpp  ObjectRenderStorage.hpp  QOL.cpp  QOL.hpp  Randomiser.cpp  Randomiser.hpp  SceneCameras.cpp  SceneCameras.hpp  Timer.cpp  Timer.hpp
objects/: building-sample-house-b.mtl  building-sample-tower-a.mtl  campfire.mtl  crops_wheatStageB.mtl  target_tile.mtl  tree_cone_tall.mtl  tree_small.mtl
shaders/: animated.frag  main.frag  main.vert  selected.frag  selected.vert  textured.frag  textured.vert
